--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&family=Roboto:wght@400;700&display=swap");
 
 
 :root {
@@ -21,7 +21,7 @@ body {
     flex-direction: column; 
     justify-content: center;
     align-items: center; 
-    font-family: 'Roboto';
+    font-family: "Roboto";
     color: var(--main-color);
 }
 
@@ -54,9 +54,6 @@ body {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
 }
-
-
-
 
 @keyframes menu {
     from {
@@ -95,30 +92,22 @@ body {
 
 .dashboard-visible {
     display: flex;
-    margin-top: 20px;
-    justify-content: center;
-    width: 80%;
-
-}
-
-.player_1_field, .player_2_field {
-    display: flex;
     flex-direction: column;
+    height: 70vh;
+    justify-content: space-evenly;
     align-items: center;
-    width: 20%;
-    height: 200px;
-    justify-content: space-around;
+
+
+}
+.message {
+    font-size: 2rem;
 }
 
-
-.player_1, .player_2 {
-    font-size: 2em;
+.btn-reset {
+    margin-top: 20px;
+    font-size: 1.2em;
+    width: 150px;
 }
-
-.player_1_score, .player_2_field {
-    font-size: 4rem;
-}
-
 
 .grid {
     display: grid;
@@ -130,7 +119,7 @@ body {
 
 .cell {
     border: 2px solid var(--main-color);
-    font-size: 120px;
+    font-size: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
