--- a/style.css
+++ b/style.css
@@ -135,3 +135,18 @@ body {
     outline: none;
 }
 
+.cell-0, .cell-3, .cell-6 {
+    border-left: none;
+}
+
+.cell-0, .cell-1, .cell-2 {
+    border-top: none;
+}
+
+.cell-2, .cell-5, .cell-8 {
+    border-right: none;
+} 
+
+.cell-6, .cell-7, .cell-8 {
+    border-bottom: none;
+}
